--- a/src/css/hint.css
+++ b/src/css/hint.css
@@ -381,7 +381,7 @@
 
 #leet-helper-overlay.lh-dark .lh-hints-steps li {
   background: #374151;
-  border-left-color: #007bff;
+  border-left-color: #ff3700;
 }
 
 #leet-helper-overlay .lh-hints-steps li:last-child {
