--- a/src/css/options.css
+++ b/src/css/options.css
@@ -97,3 +97,20 @@ body {
     color: #721c24;
   }
   
+  .seconday-section {
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    margin-top: 24px;
+  }
+
+.title {
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  margin-top: 24px;
+  }
