--- a/src/css/overlay.css
+++ b/src/css/overlay.css
@@ -155,7 +155,7 @@
   transition:
     color 0.3s ease,
     background-color 0.3s ease;
-  color: #666;
+  color: #fff;
   position: relative;
   overflow: hidden;
   box-sizing: border-box;
@@ -200,6 +200,10 @@
   overflow-y: auto;
   padding: 12px;
   max-height: 100%;
+}
+
+#leet-helper-overlay.lh-dark .lh-tab-content {
+  background: #000;
 }
 
 #leet-helper-overlay .lh-tab-pane {
