--- a/src/css/plan.css
+++ b/src/css/plan.css
@@ -50,13 +50,17 @@
   color: #000;
 }
 
+#leet-helper-overlay.lh-dark .lh-plan li {
+  color: #e1e1e1;
+}
+
 #leet-helper-overlay .lh-plan strong {
   font-weight: 600;
   color: #000;
 }
 
 #leet-helper-overlay.lh-dark .lh-plan strong {
-  color: #000;
+  color: #e1e1e1;
 }
 
 #leet-helper-overlay .lh-plan code {
@@ -73,7 +77,7 @@
 
 #leet-helper-overlay.lh-dark .lh-plan code {
   background: #404040;
-  color: #000;
+  color: #e1e1e1;
 }
 
 #leet-helper-overlay .lh-plan p {
@@ -81,6 +85,10 @@
   margin: 0;
   word-wrap: break-word;
   word-break: break-word;
+}
+
+#leet-helper-overlay.lh-dark .lh-plan p {
+  color: #e1e1e1;
 }
 
 #leet-helper-overlay .lh-plan-container {
